force-app/main/default/objects/Matching_Configuration__mdt/Matching_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Matching_Configuration</label>
    <pluralLabel>Matching_Configurations</pluralLabel>
</CustomObject>