force-app/main/default/objects/Matching_Configuration__mdt/fields/Matching_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Matching_Field_API_Name__c</fullName>
    <label>Matching_Field_API_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>