force-app/main/default/objects/Matching_Configuration__mdt/fields/Matching_Logic__c.field-meta.xml
<CustomField>
    <fullName>Matching_Logic__c</fullName>
    <label>Matching_Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact Match</fullName>
            </value>
            <value>
                <fullName>Range Match</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Hard Constraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>