force-app/main/default/objects/Matching_Configuration__mdt/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority_Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
                <default>true</default>
                <label>Hard</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>