force-app/main/default/objects/Matching_Configuration__mdt/fields/Weight_Value__c.field-meta.xml
<CustomField>
    <fullName>Weight_Value__c</fullName>
    <label>Weight_Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>